--- a/src/modules/iiif-viewer/IiifViewer.module.scss
+++ b/src/modules/iiif-viewer/IiifViewer.module.scss
@@ -80,7 +80,7 @@ $controls-margin-bottom: $spacer-sm;
 		height: calc($view-height - 10rem);
 		padding-bottom: $spacer-1xl * 4;
 
-		@media (max-width: $breakpoint-md) {
+		@media (max-width: $breakpoint-lg) {
 			padding: $spacer-1xl;
 			padding-bottom: $spacer-1xl * 4;
 			gap: 2rem;
@@ -92,7 +92,7 @@ $controls-margin-bottom: $spacer-sm;
 			border: 0.4rem solid #222;
 			width: 25%;
 
-			@media (max-width: $breakpoint-md) {
+			@media (max-width: $breakpoint-lg) {
 				width: 40%;
 			}
 
@@ -245,7 +245,7 @@ $controls-margin-bottom: $spacer-sm;
 		margin-top: -1rem;
 	}
 
-	@media (max-width: $breakpoint-md) {
+	@media (max-width: $breakpoint-lg) {
 		display: none;
 	}
 
